# animated-qr

./: .gitignore  404.html  CHANGELOG.md  README.md  create.html  index.html  package.json  pnpm-lock.yaml  privacy.md  pubspec.yaml  scan.html  settings.html
assets/: 404.html-BvtHdbvI.js  404.html-DEdUaE6D.js  404.html-ZRJ0AR01.js  404.html-r8SVaC2o.js  app-BPIfErfA.js  app-BoDWjf3c.js  app-Cd__8Jn_.js  app-Duf-asIh.js  architectureDiagram-GXAZU6X5-BpBH6D_h.js  architectureDiagram-GXAZU6X5-DGwrnHMA.js  architectureDiagram-GXAZU6X5-ZUiWgGPh.js  architectureDiagram-GXAZU6X5-rZ237Xme.js  blockDiagram-HV7WRKX4-91PgpCKY.js  blockDiagram-HV7WRKX4-BEDiosbr.js  blockDiagram-HV7WRKX4-CPOWS9uv.js  blockDiagram-HV7WRKX4-r-8zjpVy.js  c4Diagram-S26XAWAN-0Hmko-pj.js  c4Diagram-S26XAWAN-CdjfsV8t.js  c4Diagram-S26XAWAN-eeF5fsKd.js  c4Diagram-S26XAWAN-fJCua8rh.js  chunk-44WDCOIT-Df0wIqy-.js  chunk-44WDCOIT-I-dvn0BT.js  chunk-44WDCOIT-dpZ7YBwP.js  chunk-44WDCOIT-xeFZPGmE.js  chunk-4KE642ED-B7mHBjlz.js  chunk-4KE642ED-CflUBQ_o.js  chunk-4KE642ED-DjSz_wvm.js  chunk-4KE642ED-drQPhaen.js  chunk-5ZJXQJOJ-BYqAjlbA.js  chunk-5ZJXQJOJ-C0qbVYgH.js  chunk-5ZJXQJOJ-CIk62XPD.js  chunk-5ZJXQJOJ-DLJJxAj1.js  chunk-7VIK3F2G-BOqTH03E.js  chunk-7VIK3F2G-CZvlD-QH.js  chunk-7VIK3F2G-DSiKAX-J.js  chunk-7VIK3F2G-DreWmjDS.js  chunk-EJZ3NKMF-1SS4JQTu.js  chunk-EJZ3NKMF-BuUbZ9ts.js  chunk-EJZ3NKMF-D-F-RY3W.js  chunk-EJZ3NKMF-DvZBLfYI.js  (+147 more)
docs/: README.md  create.md  scan.md  settings.md
ios/: export_options.plist
lib/: main.dart  (+6 more)
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
(+46 files in other folders)
