[package]
name = "rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.99"
flutter_rust_bridge = "=2.11.1"
hex = "0.4.3"
qrcode = "0.14.1"
raptorq = "2.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
